--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /*
- Theme Name:   Taitaja2017
+ Theme Name:   Taitaja2017V1
  Description:  Enlightenment Child Theme for skills competitions taitaja2017 in Helsinki
  Author:       Alexander Gradov
  Template:     enlightenment
@@ -9,3 +9,89 @@
  Tags: black, blue, gray, white, light, one-column, two-columns, three-columns, four-columns, left-sidebar, right-sidebar, fluid-layout, fixed-layout, responsive-layout, custom-background, custom-colors, custom-header, custom-menu, editor-style, featured-image-header, featured-images, flexible-header, full-width-template, microformats, post-formats, sticky-post, theme-options, threaded-comments, translation-ready, photoblogging
  Text Domain:  taitaja2017
 */
+
+/*change link color*/
+a {
+    color: #F18621;
+}
+/*change hover and focus link color*/
+a:hover, a:focus {
+    color: #C05500;
+}
+
+/*change color for focus color for input fields*/
+input[type="text"]:focus, input[type="password"]:focus {
+    border-color: #C05500;
+    box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(192,85,0,.6);
+}
+
+/*
+*Add after logo a triangle
+*background-size and width and height should be identical
+*/
+.navbar-brand:after{
+    content: "";
+    background-image: url('http://localhost/taitaja2017/wp-content/uploads/2016/03/triangle.png');
+    background-size: 105px 55px;
+    background-repeat: no-repeat;
+    display: inline-block;
+    width: 105px;
+    height: 55px;
+    position: relative;
+    bottom: 14px;
+}
+
+/*change navbar active link color*/
+.navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > 
+.active > a:hover, .navbar-default .navbar-nav > .active > a:focus {
+    color: #F18621;
+}
+/*change navbar hover and focus link color*/
+.navbar .nav > li > a:hover, .navbar .nav li.dropdown.open > .dropdown-toggle, 
+.navbar .nav li.dropdown.open > .dropdown-toggle .menu-item-description, 
+.navbar .nav li.dropdown:target > .dropdown-toggle {
+    color: #C05500;
+}
+/*Align Search button on the mobile device*/
+.navbar-nav>li>div>a>span{
+    padding: 10px 15px;  
+}
+/*Describing behavior of secondary-logo*/ 
+#secondary-logo{
+    float: right;
+    max-height: 80px;
+}
+
+/*For tablets devices*/
+@media (min-width: 768px){
+    
+    .navbar a.navbar-brand {
+        padding: 9px 15px;
+        height: 50px;
+    }
+    .navbar {
+        min-height: 50px;
+    }
+    .navbar-offset {
+        margin-top: 50px;
+    }
+
+}
+@media (min-width: 995px){
+    .navbar-brand:after{
+        background-size: 130px 80px;
+        width: 130px;
+        height: 80px;
+    }
+    #sidebar-navbar{
+        display: block;
+    }
+    .navbar a.navbar-brand {
+        padding: 14px 15px;
+        height: 60px;
+    }
+    .navbar-nav>li>div>a>span{
+        padding: 30px 20px;
+    }
+
+}
