--- a/style.css
+++ b/style.css
@@ -37,7 +37,6 @@ input[type="text"]:focus, input[type="password"]:focus {
 */
 .navbar-brand:after{
     content: "";
-    background-image: url('http://localhost/taitaja2017/wp-content/uploads/2016/03/triangle.png');
     background-size: 105px 55px;
     background-repeat: no-repeat;
     display: inline-block;
@@ -62,6 +61,15 @@ input[type="text"]:focus, input[type="password"]:focus {
 .navbar-nav>li>div>a>span{
     padding: 10px 15px;  
 }
+/* Search icon color gray */
+#toggle-search-form{
+    color: #555; 
+}
+/* Search icon color orange */
+#toggle-search-form:hover, #toggle-search-form:focus {
+    color: #C05500;
+
+}
 /*Describing behavior of secondary-logo*/ 
 #secondary-logo{
     float: right;
@@ -70,40 +78,46 @@ input[type="text"]:focus, input[type="password"]:focus {
 
 /*For tablets devices*/
 @media (min-width: 768px){
+    /*Make triangle bigger*/
+    .navbar-brand:after {
+        background-size: 110px 60px;    
+        width: 110px;
+        height: 60px;
 
-    .navbar a.navbar-brand {
-        padding: 9px 15px;
-        height: 50px;
     }
-    .navbar {
-        min-height: 50px;
-    }
+    /*Make content closer to navbar*/
     .navbar-offset {
         margin-top: 50px;
     }
+    /*Remove margin from last elment of navbar list*/
+    .navbar-nav.navbar-right:last-child {
+        margin-right: 0;
+    }
 
 }
+/*For laptops*/
 @media (min-width: 995px){
-    .navbar {
-        min-height: 80px;
+    /* Navbar links at the bottom*/
+    .navbar .nav > li > a {
+        padding-top: 45px;
     }
+    /*Make triangle more bigger*/
     .navbar-brand:after{
         background-size: 130px 80px;
         width: 130px;
         height: 80px;
     }
-    #sidebar-navbar{
-        display: block;
-    }
-    .navbar a.navbar-brand {
-        padding: 14px 15px;
-        height: 60px;
-    }
+
+    /*Size of logo*/
     .navbar-brand > .site-logo {
         max-height: 80px;
     }
+    /* Search icon at the same line as navbar links */
     .navbar-nav>li>div>a>span{
-        padding: 30px 20px;
-    }
+        padding-top: 48px;
+        padding-right: 30px;
+        padding-bottom: 0;
+        padding-left: 0;
 
+    }
 }
