--- a/style.css
+++ b/style.css
@@ -16,13 +16,6 @@
  Text Domain:  taitaja2017
 */
 
-
-/*change color for focus color for input fields*/
-input[type="text"]:focus, input[type="password"]:focus {
-    border-color: #C05500;
-    box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(192,85,0,.6);
-}
-
 /*
 *Add after logo a triangle
 *background-size and width and height should be identical
@@ -38,30 +31,16 @@ input[type="text"]:focus, input[type="password"]:focus {
     bottom: 14px;
 }
 
-/*change navbar active link color*/
-.navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > 
-.active > a:hover, .navbar-default .navbar-nav > .active > a:focus {
-    color: #F18621;
-}
-/*change navbar hover and focus link color*/
-.navbar .nav > li > a:hover, .navbar .nav li.dropdown.open > .dropdown-toggle, 
-.navbar .nav li.dropdown.open > .dropdown-toggle .menu-item-description, 
-.navbar .nav li.dropdown:target > .dropdown-toggle {
-    color: #C05500;
-}
 /*Align Search button on the mobile device*/
 .navbar-nav>li>div>a>span{
     padding: 10px 15px;  
 }
-/* Search icon color gray */
-#toggle-search-form{
-    color: #555; 
-}
+
 /* Search icon color orange */
-#toggle-search-form:hover, #toggle-search-form:focus {
+/*#toggle-search-form:hover, #toggle-search-form:focus {
     color: #C05500;
 
-}
+}*/
 /*Describing behavior of secondary-logo*/ 
 #secondary-logo{
     float: right;
